# AUTOSAR_AP-ADAS_final

./: .gitignore  README.md  autobuid_tf_libs.sh  best.ncnn.param  create_env.sh  doc.ipynb  launcher.sh  run_x64.sh
litertProj/: CMakeLists.txt
litertProj/bestYoloMobilenet_saved_model/: metadata.yaml
litertProj/litert_arm_sdk/lib/: libabsl_bad_any_cast_impl.so.2501.0.0  libabsl_bad_variant_access.so.2501.0.0  libabsl_base.so.2501.0.0  libabsl_civil_time.so.2501.0.0  libabsl_cord.so.2501.0.0  libabsl_cord_internal.so.2501.0.0  libabsl_cordz_functions.so.2501.0.0  libabsl_cordz_handle.so.2501.0.0  libabsl_cordz_info.so.2501.0.0  libabsl_cordz_sample_token.so.2501.0.0  libabsl_crc32c.so.2501.0.0  libabsl_crc_cord_state.so.2501.0.0  libabsl_crc_cpu_detect.so.2501.0.0  libabsl_crc_internal.so.2501.0.0  libabsl_debugging_internal.so.2501.0.0  libabsl_decode_rust_punycode.so.2501.0.0  libabsl_failure_signal_handler.so.2501.0.0  libabsl_flags_commandlineflag.so.2501.0.0  libabsl_flags_commandlineflag_internal.so.2501.0.0  libabsl_flags_config.so.2501.0.0  libabsl_flags_internal.so.2501.0.0  libabsl_flags_marshalling.so.2501.0.0  libabsl_flags_private_handle_accessor.so.2501.0.0  libabsl_flags_reflection.so.2501.0.0  libabsl_flags_usage.so.2501.0.0  libabsl_flags_usage_internal.so.2501.0.0  libabsl_hash.so.2501.0.0  libabsl_hashtablez_sampler.so.2501.0.0  libabsl_int128.so.2501.0.0  libabsl_leak_check.so.2501.0.0  libabsl_log_flags.so.2501.0.0  libabsl_log_internal_check_op.so.2501.0.0  libabsl_log_internal_conditions.so.2501.0.0  libabsl_log_internal_log_sink_set.so.2501.0.0  libabsl_log_internal_message.so.2501.0.0  libabsl_log_internal_nullguard.so.2501.0.0  libabsl_log_internal_proto.so.2501.0.0  libabsl_log_severity.so.2501.0.0  libabsl_low_level_hash.so.2501.0.0  libabsl_periodic_sampler.so.2501.0.0  (+17 more)
litertProj/litert_arm_sdk/lib/pkgconfig/: absl_absl_log.pc  absl_algorithm.pc  absl_algorithm_container.pc  absl_any_invocable.pc  absl_atomic_hook.pc  absl_bad_any_cast.pc  absl_bad_optional_access.pc  absl_bad_variant_access.pc  absl_base.pc  absl_base_internal.pc  absl_bind_front.pc  absl_btree.pc  absl_charset.pc  absl_check.pc  absl_city.pc  absl_civil_time.pc  absl_cleanup.pc  absl_cleanup_internal.pc  absl_common_policy_traits.pc  absl_compressed_tuple.pc  absl_config.pc  absl_crc32c.pc  (+90 more)
yoloCnnTrafficLight_onlyPi/: CMakeLists.txt  main.cpp
yoloCnnTrafficLight_onlyPi/best_yolo26n_e2e_320/: best_float16.tflite  best_float32.tflite  best_full_integer_quant.tflite  best_int8.tflite  best_integer_quant.tflite  fingerprint.pb  metadata.yaml  saved_model.pb
yoloCnnTrafficLight_onlyPi/best_yolo26n_e2e_320/variables/: variables.data-00000-of-00001  variables.index
yoloCnnTrafficLight_onlyPi/best_yolo26n_e2e_480/: best_float16.tflite  best_float32.tflite  best_integer_quant.tflite  saved_model.pb
yoloCnnTrafficLight_onlyPi/best_yolo26n_e2e_512/: best_float16.tflite  best_float32.tflite  best_full_integer_quant.tflite  best_int8.tflite  best_integer_quant.tflite  fingerprint.pb  metadata.yaml  saved_model.pb
yoloCnnTrafficLight_onlyPi/best_yolo26n_e2e_512/variables/: variables.data-00000-of-00001  variables.index
yoloCnnTrafficLight_onlyPi/best_yolo26n_nms_tflite/: best_float16.tflite  best_float32.tflite  best_full_integer_quant.tflite  best_int8.tflite  best_integer_quant.tflite  fingerprint.pb  metadata.yaml  saved_model.pb
yoloCnnTrafficLight_onlyPi/best_yolo26n_nms_tflite/variables/: variables.data-00000-of-00001  variables.index
yoloCnnTrafficLight_onlyPi/best_yolo26n_tflite/: best_float16.tflite  best_float32.tflite  best_full_integer_quant.tflite  best_integer_quant.tflite  best_tensor_correspondence_report.json  metadata.yaml
yoloCnnTrafficLight_onlyPi/litert_arm_sdk_native_pi/lib/: libabsl_base.so.2501.0.0  libabsl_cord_internal.so.2501.0.0  libabsl_cordz_info.so.2501.0.0  libabsl_crc_cpu_detect.so.2501.0.0  libabsl_debugging_internal.so.2501.0.0  libabsl_decode_rust_punycode.so.2501.0.0  libabsl_failure_signal_handler.so.2501.0.0  libabsl_graphcycles_internal.so.2501.0.0  libabsl_log_internal_log_sink_set.so.2501.0.0  libabsl_log_internal_message.so.2501.0.0  libabsl_low_level_hash.so.2501.0.0  libabsl_periodic_sampler.so.2501.0.0  libabsl_random_internal_distribution_test_util.so.2501.0.0  libabsl_random_seed_sequences.so.2501.0.0  libabsl_stacktrace.so.2501.0.0  libabsl_strings_internal.so.2501.0.0  libabsl_throw_delegate.so.2501.0.0
(+4729 files in other folders)
